--- a/.github/workflows/youth_read.yml
+++ b/.github/workflows/youth_read.yml
@@ -18,7 +18,9 @@ jobs:
       YOUTH_READ3: ${{ secrets.YOUTH_READ3 }}
       YOUTH_READ4: ${{ secrets.YOUTH_READ4 }}
       YOUTH_READ5: ${{ secrets.YOUTH_READ5 }}
-      YOUTH_READ6: ${{ secrets.YOUTH_READ6 }}
+      YOUTH_READ5: ${{ secrets.YOUTH_READ6 }}
+      YOUTH_READ6: ${{ secrets.YOUTH_READ7 }}
+      YOUTH_READ5: ${{ secrets.YOUTH_READ8 }}
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
@@ -44,7 +46,7 @@ jobs:
           node Task/Youth_Read.js
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ2 }}
-      - name: '运行 【中青看点账号1-文章阅读3-35篇】'
+      - name: '运行 【中青看点账号2-文章阅读3-35篇】'
         if: env.YOUTH_READ3
         run: |
           node Task/Youth_Read.js
@@ -56,15 +58,28 @@ jobs:
           node Task/Youth_Read.js
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ4 }}
-      - name: '运行 【中青看点账号2-文章阅读2-54篇】'
+      - name: '运行 【中青看点账号3-文章阅读2-54篇】'
         if: env.YOUTH_READ5
         run: |
           node Task/Youth_Read.js
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ5 }}
-      - name: '运行 【中青看点账号2-文章阅读3-54篇】'
+      - name: '运行 【中青看点账号3-文章阅读3-54篇】'
         if: env.YOUTH_READ6
         run: |
           node Task/Youth_Read.js
         env:
           YOUTH_READ: ${{ secrets.YOUTH_READ6 }}
+          - name: '运行 【中青看点账号4-文章阅读1-54篇】'
+        if: env.YOUTH_READ7         
+        run: |
+          node Task/Youth_Read.js
+        env:
+          YOUTH_READ: ${{ secrets.YOUTH_READ7 }}
+          
+          - name: '运行 【中青看点账号4-文章阅读1-54篇】'
+        if: env.YOUTH_READ8         
+        run: |
+          node Task/Youth_Read.js
+        env:
+          YOUTH_READ: ${{ secrets.YOUTH_READ8 }}
