--- a/.github/workflows/qqyd.yml
+++ b/.github/workflows/qqyd.yml
@@ -12,17 +12,18 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-        COOKIE_QQYD: ${{ secrets.COOKIE_QQYD }}
+        QQREAD_HEADER: ${{ secrets.QQREAD_HEADER }}
+        QQREAD_TIMEHEADER: ${{ secrets.QQREAD_TIMEHEADER }}
+        QQREAD_TIMEBODY: ${{ secrets.QQREAD_TIMEBODY }}
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js 10.x
+      - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
-          node-version: 10.x
+          node-version: 14.x
       - name: npm install
         run: |
           npm install
