--- a/.github/workflows/qqyd.yml
+++ b/.github/workflows/qqyd.yml
@@ -30,7 +30,7 @@ jobs:
           npm install
       - name: ' 运行 【企鹅阅读】'
         run: |
-          node Scripts/qqyd.js
+          node Scripts/qqread.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
