--- a/.github/workflows/qqyd.yml
+++ b/.github/workflows/qqyd.yml
@@ -17,7 +17,7 @@ jobs:
     env:
         QQREAD_HEADER: ${{ secrets.QQREAD_HEADER }}
         QQREAD_TIMEHEADER: ${{ secrets.QQREAD_TIMEHEADER }}
-        QQREAD_TIMEBODY: ${{ secrets.QQREAD_TIMEBODY }}
+        QQREAD_TIMEURL: ${{ secrets.QQREAD_TIMEURL }}
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js 14.x
