--- a/.github/workflows/qqyd.yml
+++ b/.github/workflows/qqyd.yml
@@ -18,7 +18,8 @@ jobs:
         QQREAD_HEADER: ${{ secrets.QQREAD_HEADER }}
         QQREAD_TIMEHEADER: ${{ secrets.QQREAD_TIMEHEADER }}
         QQREAD_TIMEURL: ${{ secrets.QQREAD_TIMEURL }}
-  - name: Checkout
+    steps:
+      - name: Checkout
         uses: actions/checkout@v2
         with:
           repository: lxmd01/youth
