--- a/.github/workflows/qqyd.yml
+++ b/.github/workflows/qqyd.yml
@@ -6,7 +6,7 @@ name: 企鹅阅读
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/11 * * * *'
+    - cron: '*/11 1-23 * * *'
   watch:
     types: [started]
 
