--- a/.github/workflows/qqyd.yml
+++ b/.github/workflows/qqyd.yml
@@ -1,51 +1,49 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 企鹅阅读
+name: 企鹅读书
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/11 * * * *'
+     - cron: '*/4 * * * *'
   watch:
-    types: [started]
+    types: started
 
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-        QQREAD_HEADER: ${{ secrets.QQREAD_HEADER }}
-        QQREAD_TIMEHEADER: ${{ secrets.QQREAD_TIMEHEADER }}
-        QQREAD_TIMEURL: ${{ secrets.QQREAD_TIMEURL }}
+       QQREAD_HEADER: ${{ secrets.QQREAD_HEADER }}
+       QQREAD_TIMEURL: ${{ secrets.QQREAD_TIMEURL }}
+       QQREAD_TIMEHEADER: ${{ secrets.QQREAD_TIMEHEADER }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          repository: lxmd01/youth
-      - name: Use Node.js ${{ matrix.node-version }}
+        run: |
+          git clone https://github.com/lxmd01/youth.git ~/youth
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
-      - name: npm install 
-        if: env.QQREAD_HEADER
+          node-version: 12.x
+      - name: npm install
+        if: env.QQREAD_TIMEURL
         run: |
+          cd ~/youth
           npm install
-      - name: ' 运行 【企鹅阅读】'
+          npm install got
+          npm install tough-cookie
+      - name: '运行 【企鹅读书】'
+        
         run: |
+          cd ~/youth/Task
           node qqread.js
         env:
+          
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
